# tube-adventures

./: .gitignore  CMakeLists.txt  README.md
cmake/: copy_qt_dependencies.cmake  qt_helpers.cmake
data/RAPSODA Y LA JOSE/: Rapsoda y La Jose - Zoom (Camino sombrio) MeyC5u1Z7v8.xml  Rapsoda y La Jose - Zoom (Laberinto) 588Kswktc9E.xml  Rapsoda y La Jose - Zoom (Videoclip Interactivo) E1m-P0wsdmi.xml
data/TUBE-ADVENTURES/: TA01 yVebIlvkOnU.xml  TA02 5AkWHfJV8RQ.xml  TA03 Nz3OeyRyUfE.xml  TA04 MnBL8LY4kgc.xml  TA05 ccmNrLmG-6U.xml  TA06 SQ4VCOT5w-w.xml  TA07 5JQBACKTLO8.xml  TA08 LyGdkID_EOg.xml  TA09 _EIxIlpqRio.xml  TA10 KdSImTQRQEA.xml  TA11 xizooMsqv5s.xml  TA12 bKPrAyI95dM.xml  TA13 bvH-4uA_9-Q.xml  TA14 esNIoSleZqA.xml  TA15 texlhDSgVRc.xml  TA16 FMAjPmAmYYY.xml  TA17 1w0GG4LO9Xs.xml  TA18 UwudycbD3oo.xml  TA19 dJLI81Ydo84.xml  TA20 KiTQRP1KK0U.xml  TA21 AVf-W6MkqA0.xml  TA22 5j4gwujTVjg.xml  TA23 iTQK5q5RoUw.xml  TA24 sncgDs4YBpo.xml  TA25 akGnLUy6aWU.xml  TA26 bQltg0Hwq84.xml  TA27 bPUSj_brL6w.xml  TA28 RpIRRZjL40g.xml  TA29 QqCFr0w2Z18.xml  TA30 rlZRFsPpCyQ.xml  TA31 1nIr4OsRGvM.xml  TA32 ZYgBT9_Oi54.xml  TA33 FzD4oiaYAZQ.xml  TA34 w0TWWHDSdFE.xml  TA35 -3h0wRZq_1I.xml  TA36 -BdkyO3SgJA.xml  TA37 5AtSNnxBxE4.xml  TA38 eOz7LM6DYRM.xml  TA39 05TL_bQF0os.xml  TA40 GcPZcM7qYQQ.xml  (+28 more)
data/TUBE-ADVENTURES 2/: Hall of Fame - juego 100% completado 6PNXChFKsQU.xml  TA20001 pY6QbkRPidU.xml  TA20002 HjdMahRsBG4.xml  TA20003 nAoPXNXUbH8.xml  TA20004 AD6rVIVcq7Y.xml  TA20005 vNTrGDFaUw8.xml  TA20006 5P95R9b2xfw.xml  TA20007 b-3c4_gkCe8.xml  TA20008 fC01fMnsNVA.xml  TA20009 R6EXrXtvWrM.xml  TA20010 ZhNPIxeclq0.xml  TA20011 dakbq1SQsUo.xml  TA20012 ULYQL3SOosQ.xml  TA20013 bB9_nQObkcE.xml  TA20014 HWIO3_ucats.xml  TA20015 w3uvUMoPWhY.xml  TA20016 2DgYPeT5ARs.xml  TA20017 Is7V7nuik8c.xml  TA20018 k7NrAPSpbt8.xml  TA20019 zcXsc9utm9w.xml  TA20020 ShDxTEn9xqk.xml  TA20021 ZScnzYH8Djk.xml  TA20022 dFxBOnHQQHY.xml  TA20023 Mw2mEaHmURA.xml  TA20024 OyMlw6NM45I.xml  TA20025 lbsb_6KOcM8.xml  TA20026 kEIYD2Ua2bM.xml  TA20027 NA1TZQc3jb0.xml  TA20028 fyVY3YBp9zo.xml  TA20029 MG1oHOBhgWs.xml  TA20030 EYcoel4kQWg.xml  TA20031 nxVieKT2MVA.xml  TA20032 aybSo8JTZY4.xml  TA20033 UKisViFeG7E.xml  TA20034 vhn5dyxcCOU.xml  TA20035 FpFZCyvOavM.xml  TA20036 8lul4xiaYow.xml  TA20037 fz5JN5MFHUQ.xml  TA20038 eJW9qKjZLfc.xml  TA20039 KbvP9cGoWN4.xml  (+533 more)
data/TUBE-ADVENTURES 3/: (ALC) Entrada Old Town Norte NONE NOITEM (FURIA) 8sZR7GVfU9E.xml  (LECHE) Entrada Old Town Norte NONE NOITEM 1Ee2fFxdKiw.xml  (LECHE) Entrada Old Town Norte PIC NOITEM aVLlheWGx6U.xml  Alcaparras fuerza K=3 F=1_F=3 NONE ALC Z0mdd5IwpgI.xml  Aprendiendo a vivir 1 Comportamiento laboral Le8vkbH_gc0.xml  Atrapan a Bufon K=E NONE _ K=ES NONE aHbTLKjV0II.xml  Atrapan a Bufon K=E P=1 _ K=ES P=1 xV4NI98Bs9E.xml  Atrapan a Bufon K=E P=2 _ K=ES P=2 PzZheVBIfwY.xml  Atrapan a Bufon K=E P=3 _ K=ES P=3 2wurWuY2suc.xml  Atrapan a Bufon K=EA NONE LECHE_ K=3 NONE LECHE A-Fawztmgis.xml  Atrapan a Bufon K=EA NONE _ K=3 NONE m7kl2UEuQMo.xml  Atrapan a Bufon K=EA P=1 LECHE_ K=3 P=1 LECHE w42lF7F-PtU.xml  Atrapan a Bufon K=EA P=1 _ K=3 P=1 qXBDtIAj50E.xml  Atrapan a Bufon K=EA P=2 LECHE_ K=3 P=2 LECHE EgW3vOwgLe4.xml  Atrapan a Bufon K=EA P=2 _ K=3 P=2 1sed94iMaUk.xml  Black Card 1-5 KHXBB0TtXWc.xml  Black Card 2-5 84en3qvIQoc.xml  Black Card 2-5 SPqfk_I_Cas.xml  Black Card 3-5 F9tKxznmRd0.xml  Black Card 3-5 SYfLvT39wHI.xml  Black Card 4-5 1is_11CwbuM.xml  Black Card 4-5 eV-PrBCeUbM.xml  Black Card 5-5 SgP0MTKBYfc.xml  Black Card 5-5 eBKWFYv3UpY.xml  Bufon aparece y desaparece K=E F=3 JiCGFoFin5I.xml  Bufon aparece y desaparece K=EA F=2 QIkTi-sBN7U.xml  Calle 6 carta bufon wrhsRkS8OAk.xml  Car Life - capitulo 1 (completo) ad_xp1YAY98.xml  Chipriota (azul) y esperar K=E F=3 CDpvD6Mpfpg.xml  Chipriota (azul) y esperar K=E NONE lmflYTQFmP8.xml  Chipriota (azul) y esperar K=E P=2 rnaROxuQZSQ.xml  Chipriota (azul) y esperar K=E P=3 sp-7oDHXGTw.xml  Chipriota (azul) y esperar K=EA F=2 Y7Avjg7pxnU.xml  Chipriota (azul) y esperar K=EA P=1 LECHE vdlfT855EWI.xml  Chipriota (azul) y esperar K=EA P=1 QZMZFLziPkU.xml  Chipriota (azul) y esperar K=EA P=2 LECHE VK3djOqMCTw.xml  Chipriota (azul) y esperar K=EA P=2 Vpl-pwPsZkc.xml  Chipriota(azul)_incorreto K=ENT F=3 El3pd4se9vU.xml  Chipriota(azul)_incorreto K=ENT NONE SCmc_XyH3to.xml  Chipriota(azul)_incorreto K=ENT P=2 Xycx7X9hQdw.xml  (+684 more)
data/Tube Adventures salva la Navidad 1/: Especial Navidad 2014 Paliza Aghh cKObIxTNjEI.xml  Especial Navidad 2014 Regar plantas 75Ay1VHDrTs.xml  Especial Navidad 2014 Servicio telefonico 6VAV1ZVCs_M.xml  Tube Adventures salva la Navidad primera parte AnFlrjEvQQY.xml
data/Tube Adventures salva la Navidad 2/: Especial Navidad 2014 Viajar en coche xRr9tgPzUHo.xml  Especial Navidad 2014 Viajar en teletransportador U4ZjlrlLwXU.xml  Tube Adventures salva la Navidad segunda parte KEvk-ET5m4M.xml
data/Tube Adventures salva la Navidad 3/: TANav3_01 Xv1aOiLGyaU.xml  TANav3_02 8YXfYjs_9Xc.xml  TANav3_03 sEbRSpqYzWs.xml  TANav3_04 epIIhZjWmr4.xml  TANav3_05 IQQO8HTZ2bk.xml  TANav3_06 119NPHc-9SI.xml  TANav3_07 zc7KE4gTaAU.xml  TANav3_08 qRVRo7hmhoM.xml  TANav3_09 E07_iyos70s.xml  TANav3_10 eW362QumGLA.xml  TANav3_11 DLS2aJTlyEo.xml  TANav3_12 1g6UJnLPgos.xml  Tube Adventures salva la Navidad 3 FjeZ6nxVG2Y.xml
tube-adventures/: CMakeLists.txt  conanfile.txt
tube-adventures/exe/: CMakeLists.txt  main.cc
tube-adventures/lib/: CMakeLists.txt
tube-adventures/lib/src/: annotations.cc  annotations.hh  mainwindow.cc  mainwindow.hh
tube-adventures/lib/src/ui/: mainwindow.ui
tube-adventures/src/: main.cc  mainwindow.cc  mainwindow.hh
tube-adventures/src/ui/: mainwindow.ui
tube-adventures/tests/: CMakeLists.txt  catch_main.cc
tube-adventures/tests/constexpr_tests/: constexpr_tests.cc
tube-adventures/tests/tests/: annotations.tests.cc
